[gd_scene load_steps=6 format=2]

[ext_resource path="res://Item/ItemDrop.gd" type="Script" id=1]
[ext_resource path="res://Art/Consumable/Apple.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 7.2003

[sub_resource type="Animation" id=4]
resource_name = "Float"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ), Vector2( 0, -9 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ) ]
}

[node name="ItemDrop" type="KinematicBody2D"]
position = Vector2( 0, 2 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.595276, -4.46457 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Float"
anims/Float = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="DropTime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="DropTime" to="." method="_on_DropTime_timeout"]
